generated-tests/tests/snapshots/rust/rust__test_generated_token_tree_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
macro_rules! test_macro1 { ({ $($content:tt)* }) => { $($content)* }; }

AST:
(source_file
  (macro_definition
    (identifier test_macro1)
    (macro_rule
      (token_tree_pattern
        (token_tree_pattern
          (token_repetition_pattern
            (token_binding_pattern
              (metavariable)
              (fragment_specifier)
            )
          )
        )
      )
      (token_tree
        (token_repetition
          (metavariable)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_macro1",
            line_number: 1,
            definition_type: MacroDefinition,
            scope: None,
        },
        Definition {
            name: "$content",
            line_number: 1,
            definition_type: MacroVariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
