generated-tests/tests/snapshots/rust/rust__test_generated_trait_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
trait TestTrait1 { fn method1(&self) -> i32; }

AST:
(source_file
  (trait_item
    (type_identifier)
    (declaration_list
      (function_signature_item
        (identifier method1)
        (parameters
          (self_parameter
            (self)
          )
        )
        (primitive_type)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestTrait1",
            line_number: 1,
            definition_type: Other(
                "trait_item",
            ),
            scope: Some(
                "TestTrait1",
            ),
        },
        Definition {
            name: "method1",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "TestTrait1",
            ),
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
