generated-tests/tests/snapshots/rust/rust__test_generated_tuple_struct_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Point(x16, y5) = point_val { }

AST:
(source_file
  (expression_statement
    (if_expression
      (let_condition
        (tuple_struct_pattern
          (identifier Point)
          (identifier x16)
          (identifier y5)
        )
        (identifier point_val)
      )
      (block)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x16",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
        Definition {
            name: "y5",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
